--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-icons": "^4.3.1",
     "react-loading-overlay": "^1.0.1",
     "react-loadingmask": "^4.0.6",
-    "react-spinners": "^0.11.0"
+    "react-spinners": "^0.11.0",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
