--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.15",
     "@chakra-ui/react": "^1.6.9",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@fontsource/open-sans": "^4.5.1",
+    "@material-ui/utils": "^4.11.2",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@react-icons/all-files": "^4.1.0",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.22.0",
     "bcryptjs": "^2.4.3",
@@ -21,14 +25,19 @@
     "mongodb": "^4.1.3",
     "next": "11.1.2",
     "next-auth": "^3.29.0",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-loading-overlay": "^1.0.1",
     "react-loadingmask": "^4.0.6",
+    "react-particles-js": "^3.6.0",
     "react-reveal": "^1.2.2",
+    "react-scroll": "^1.8.4",
     "react-spinners": "^0.11.0",
-    "swr": "^1.0.1"
+    "react-tsparticles": "^1.37.5",
+    "swr": "^1.0.1",
+    "tsparticles": "^1.37.5",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
