--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@chakra-ui/react": "^1.6.9",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/open-sans": "^4.5.1",
+    "@fontsource/alef": "^4.5.0",
+    "@fontsource/open-sans": "^4.5.2",
+    "@fontsource/raleway": "^4.5.0",
     "@material-ui/utils": "^4.11.2",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
