--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "11.1.2",
     "next-auth": "^3.29.0",
     "react": "^17.0.2",
+    "react-code-ui": "0.0.4-beta-0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-loading-overlay": "^1.0.1",
