--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,26 +1,38 @@
+# Node.js
+# Build a general Node.js project with npm.
+# Add steps that analyze code, save build artifacts, deploy, and more:
+# <https://docs.microsoft.com/azure/devops/pipelines/languages/javascript>
+
+trigger:
+- master
+
 pool:
-  name: Azure Pipelines
+  vmImage: 'ubuntu-latest'
+
 steps:
-- script: 'npm install'
-  displayName: 'Install Dependencies'
+- task: NodeTool@0
+  inputs:
+    versionSpec: '10.x'
+  displayName: 'Install Node.js'
 
 - script: |
-   npm run build
-   
-  displayName: 'Build the project'
+    npm install
+    npm run build
+  displayName: 'npm install and build'
+- task: ArchiveFiles@1
+  displayName: 'Archive files '
+  inputs:
+    rootFolder: '$(System.DefaultWorkingDirectory)'
+    includeRootFolder: false
 
 - task: CopyFiles@2
-  displayName: 'Copy Files'
+  displayName: 'Copy File to: $(TargetFolder)'
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)/out'
-    TargetFolder: '$(Build.ArtifactStagingDirectory)'
-
-- task: ArchiveFiles@2
-  displayName: 'Archive $(Build.ArtifactStagingDirectory)'
-  inputs:
-    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    SourceFolder: '$(Build.ArtifactStagingDirectory)'
+    Contents: '$(Build.BuildId).zip'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)\\ArtifactsToBePublished'
 
 - task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: static-next-web'
+  displayName: 'Publish Artifact: SampleApp'
   inputs:
-    ArtifactName: 'static-next-web'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)\\ArtifactsToBePublished'
